crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.2.minified/output.js
var A, M2;
!function(A) {
    var B;
    let B;
    (B = B || (B = {
    })).C = class {
    }, A.B = B;
}(A || (A = {
})), (function(M2) {
    var X, Point;
    let X;
    (X = X || (X = {
    })).Point = Point, M2.X = X;
})(M2 || (M2 = {
}));
